--- a/Makefile.in
+++ b/Makefile.in
@@ -40,7 +40,7 @@ GAUCHE_PKGARCHDIR = "$(DESTDIR)@GAUCHE_PKGARCHDIR@"
 
 gauche_groonga_SRCS = $(srcdir)/gauche_groonga.c $(srcdir)/gauche_groongalib.stub
 
-all : $(TARGET)
+all :
 	cd src;$(MAKE)
 
 check : all
