--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -23,9 +23,9 @@ EXEEXT = @EXEEXT@
 LOCAL_PATHS = "@LOCAL_PATHS@"
 
 # Module-specific stuff
-PACKAGE   = gauche-groonga
+PACKAGE   = gauche--groonga
 
-ARCHFILES = gauche-groonga.$(SOEXT)
+ARCHFILES = gauche--groonga.$(SOEXT)
 SCMFILES  = $(srcdir)/gauche_groonga.scm
 HEADERS   = 
 
@@ -42,9 +42,9 @@ gauche_groonga_SRCS = $(srcdir)/gauche_groonga.c $(srcdir)/gauche_groongalib.stu
 
 all : $(TARGET)
 
-gauche-groonga.$(SOEXT): $(gauche_groonga_SRCS)
+gauche--groonga.$(SOEXT): $(gauche_groonga_SRCS)
 	$(GAUCHE_PACKAGE) compile \
-	  --local=$(LOCAL_PATHS) --verbose gauche-groonga $(gauche_groonga_SRCS)
+	  --local=$(LOCAL_PATHS) --verbose gauche--groonga $(gauche_groonga_SRCS)
 
 check : all
 	@rm -f test.log
