--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -22,6 +22,9 @@ OBJEXT = @OBJEXT@
 EXEEXT = @EXEEXT@
 LOCAL_PATHS = "@LOCAL_PATHS@"
 
+CPPFLAGS       = -I. @GROONGA_CFLAGS@
+LIBS           = @GROONGA_LIBS@ @LIBS@
+
 # Module-specific stuff
 PACKAGE   = gauche--groonga
 
@@ -38,13 +41,17 @@ GAUCHE_PKGINCDIR  = "$(DESTDIR)@GAUCHE_PKGINCDIR@"
 GAUCHE_PKGLIBDIR  = "$(DESTDIR)@GAUCHE_PKGLIBDIR@"
 GAUCHE_PKGARCHDIR = "$(DESTDIR)@GAUCHE_PKGARCHDIR@"
 
-gauche_groonga_SRCS = $(srcdir)/gauche_groonga.c $(srcdir)/gauche_groongalib.stub
+gauche_groonga_SRCS = $(srcdir)/gauche_groonga.c \
+$(srcdir)/gauche_groongalib.stub \
+$(srcdir)/grn-types.stub
 
 all : $(TARGET)
 
 gauche--groonga.$(SOEXT): $(gauche_groonga_SRCS)
 	$(GAUCHE_PACKAGE) compile \
-	  --local=$(LOCAL_PATHS) --verbose gauche--groonga $(gauche_groonga_SRCS)
+	--local=$(LOCAL_PATHS) --verbose \
+        --ldflags="$(LDFLAGS)" --libs="$(LIBS)" --cflags="$(CPPFLAGS)" \
+        gauche--groonga $(gauche_groonga_SRCS)
 
 check : all
 	@rm -f test.log
