fixed to work clean target

--- a/Makefile.in
+++ b/Makefile.in
@@ -60,8 +60,7 @@ uninstall :
 	$(INSTALL) -U $(GAUCHE_PKGLIBDIR)/.packages $(PACKAGE).gpd
 
 clean :
-	$(GAUCHE_PACKAGE) compile --clean gauche_groonga $(gauche_groonga_SRCS)
-	rm -rf core $(TARGET) $(GENERATED) *~ test.log so_locations
+	cd src; $(MAKE) clean
 
 distclean : clean
 	rm -rf $(CONFIG_GENERATED)
