fixed to use test/run-test.sh

--- a/Makefile.in
+++ b/Makefile.in
@@ -45,7 +45,8 @@ all :
 
 check : all
 	@rm -f test.log
-	$(GOSH) -I. -I$(srcdir) $(srcdir)/test.scm > test.log
+	sh test/run-test.sh >> test.log
+	@cat test.record
 
 install : all
 	$(INSTALL) -m 444 -T $(GAUCHE_PKGINCDIR) $(HEADERS)
