--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -43,7 +43,7 @@ GAUCHE_PKGARCHDIR = "$(DESTDIR)@GAUCHE_PKGARCHDIR@"
 
 gauche_groonga_SRCS = $(srcdir)/gauche_groonga.c \
 $(srcdir)/gauche_groongalib.stub \
-$(srcdir)/grn-types.stub
+$(srcdir)/grn-const.stub
 
 all : $(TARGET)
 
