--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -42,7 +42,7 @@ GAUCHE_PKGLIBDIR  = "$(DESTDIR)@GAUCHE_PKGLIBDIR@"
 GAUCHE_PKGARCHDIR = "$(DESTDIR)@GAUCHE_PKGARCHDIR@"
 
 gauche_groonga_SRCS = $(srcdir)/gauche_groonga.c \
-$(srcdir)/gauche_groongalib.stub \
+$(srcdir)/groongalib.stub \
 $(srcdir)/grn-const.stub
 
 all : $(TARGET)
