--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -44,6 +44,7 @@ GAUCHE_PKGARCHDIR = "$(DESTDIR)@GAUCHE_PKGARCHDIR@"
 gauche_groonga_SRCS = $(srcdir)/gauche_groonga.c \
 $(srcdir)/groongalib.stub \
 $(srcdir)/grn-const.stub \
+$(srcdir)/grn-obj.stub \
 $(srcdir)/grn-table.stub
 
 all : $(TARGET)
